--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <img src="Aishah.jpg" alt="Profile Picture" class="profile-img">
         <h2>Aishah Abdulazeez</h2>
         <p class="location">Lagos,Nigeria</p>
-        <p class="bio">"Front-end developer, Accountant and avid reader."</p>
+        <p class="bio">"Front-end developer, Accountant, bookkeeper, and avid reader."</p>
         <div class="links">
             <a href="https://github.com/Ummi-azeez" class="btn">GitHub</a>
             <a href="https://www.frontendmentor.io/home" class="btn">Frontend Mentor</a>
             <a href="https://www.linkedin.com/in/aishah-abdulazeez" class="btn">LinkedIn</a>
-            <a href="https://x.com/home" class="btn">Twitter</a>
+            <a href="https://x.com/AishahAbdulaze2" class="btn">Twitter</a>
             <a href="https://www.instagram.com/haysha_azeez/?next=%2F" class="btn">Instagram</a>
+             <a href="http://www.youtube.com/@hayshaAzeez" class="btn">Youtube</a>
         </div>
     </div>
 </body>
